--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@types/react-dom": "^18.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
+    "tailwindcss": "^3.1.8",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
@@ -20,7 +21,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "watch-css": "npx tailwindcss -i ./src/styles/index.css -o ./public/styles.css --watch"
   },
   "eslintConfig": {
     "extends": [
