--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "^2.1.3",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.7.4",
+    "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -44,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/validator": "^13.7.5"
   }
 }
