--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/dagemtadesse/hiemdall#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cloudinary": "^1.32.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
