--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/dagemtadesse/hiemdall#readme",
   "dependencies": {
+    "accesscontrol": "^2.2.1",
     "bcrypt": "^5.0.1",
     "cloudinary": "^1.32.0",
     "compression": "^1.7.4",
